tested ekf and mono vo together with new altimeter.  VO seems to be half off, but probably good enough

--- a/params/estimator.yaml
+++ b/params/estimator.yaml
@@ -57,6 +57,15 @@ R_Mocap: [0.01, 0,0,0,0,0,0,
           0.01, 0,0,0,0,0,0,
           0.01],
 
+R_Flow: [0.001, 0, 0, 0,
+         0.001, 0, 0, 0,
+         0.001],
+
+R_Altimeter: [0.01],
+
+#TF_camera_to_body: [0.01, 0.08, 0.04, 0.0, 0.0, 0.785398], # Hummingbird Quad
+TF_camera_to_body: [0.00, 0.00, 0.2, 0.0, 0.0, 0.0],  # Shredder Sim
+
 inner_loop_rate: 200,
 alpha: 0.3
 }
