Got magnetometer working for lat/lon of provo

--- a/params/estimator.yaml
+++ b/params/estimator.yaml
@@ -57,11 +57,15 @@ R_Mocap: [0.01, 0,0,0,0,0,0,
           0.01, 0,0,0,0,0,0,
           0.01],
 
-# R_GPS: [5.1, 0,0,0,0,0,
-#         5.1, 0,0,0,0,0,
+# R_GPS: [3, 0,0,0,0,0,
+#         3, 0,0,0,0,0,
 #         10,  0,0,0,0,0,
 #         4,   0,0,0,0,0,
-#         .175],
+#         .9],
+
+R_Mag: [0.0018,  0,0,0,
+        0.0018,  0,0,0,
+        0.0018],
 
 R_GPS: [3.0, 0,0,0,
         3.0, 0,0,0,
