--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -34,6 +34,7 @@ enable_out_of_order: false # TODO this isnt fully implemented
 use_mocap: false
 use_gnss: true
 use_baro: true
+use_aruco: true
 use_range: false
 use_zero_vel: true
 
@@ -49,7 +50,7 @@ P0: [10.0, 10.0, 10.0, # pos
      # 9.0,           # baro bias
      0.0,           # baro bias
      100.0, # reference altitude
-     0.0, 0.0, 0.0] # aruco position
+     1.0, 1.0, 1.0] # aruco position
 
 ## Additive Process Noise
 Qx: [0.000, 0.000, 0.000,       # pos
@@ -60,7 +61,7 @@ Qx: [0.000, 0.000, 0.000,       # pos
      # 0.000001,                    # baro bias
      0.00000,                    # baro bias
      1.0,                       # reference altitude
-     0.0, 0.0, 0.0]             # aruco position
+     0.0001, 0.0001, 0.0001]             # aruco position
 
 ## Lambda (Partial Update)
 # 1.0 = use full update
@@ -73,7 +74,7 @@ lambda: [1.0, 1.0, 1.0,       # pos
          # 0.5,                 # baro bias
          0.0,                 # baro bias
          0.3,                 # reference altitude
-         0.0, 0.0, 0.0]       # aruco position
+         1.0, 1.0, 1.0]       # aruco position
 
 # Constant Parameeters
 p_b2g: [0, 0, 0] # position from body frame to gps frame
@@ -93,6 +94,7 @@ position_noise_stdev: 0.01 # Mocap
 attitude_noise_stdev: 0.01 # Mocap
 baro_pressure_noise_stdev: 2.0
 range_noise_stdev: 0.1
+aruco_pos_stdev: 0.1
 
 manual_gps_noise: false # choose noise params for GPS or use the values reported from the message topic
 gps_horizontal_stdev: 0.021
