--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -50,7 +50,8 @@ P0: [10.0, 10.0, 10.0, # pos
      # 9.0,           # baro bias
      0.0,           # baro bias
      100.0, # reference altitude
-     1.0, 1.0, 1.0] # aruco position
+     1.0, 1.0, 1.0, # aruco position
+     1.0]           # aruco attitude
 
 ## Additive Process Noise
 Qx: [0.000, 0.000, 0.000,       # pos
@@ -61,7 +62,8 @@ Qx: [0.000, 0.000, 0.000,       # pos
      # 0.000001,                    # baro bias
      1.01,                    # baro bias
      1.0,                       # reference altitude
-     0.0001, 0.0001, 0.0001]             # aruco position
+     0.0001, 0.0001, 0.0001,             # aruco position
+     1.0]                       # aruco attitude
 
 ## Lambda (Partial Update)
 # 1.0 = use full update
@@ -73,11 +75,12 @@ lambda: [1.0, 1.0, 1.0,       # pos
          0.1, 0.1, 0.1,       # gyro bias
          0.5,                 # baro bias
          0.3,                 # reference altitude
-         1.0, 1.0, 1.0]       # aruco position
+         1.0, 1.0, 1.0,       # aruco position
+         1.0]                 # aruco attitude
 
 # Constant Parameeters
 p_b2g: [0, 0, 0] # position from body frame to gps frame
-# p_b_c: [0., 0., 0.]
+# p_b_c: [0., 0., 0.] # TODO
 q_b2c: [0.7071, 0, 0, 0.7071]
 
 # Initial State
