--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -26,9 +26,9 @@ enable_log: true
 ## Measurement Processing
 enable_partial_update: true
 enable_out_of_order: false # TODO this isnt fully implemented
-use_mocap: true
-use_gnss: false
-use_baro: false
+use_mocap: false
+use_gnss: true
+use_baro: true
 use_aruco: true
 use_range: false
 use_zero_vel: true
@@ -46,6 +46,7 @@ P0: [10.0, 10.0, 10.0, # pos
      0.0,           # baro bias
      100.0, # reference altitude
      1.0, 1.0, 1.0, # aruco position
+     1.0, 1.0,      # aruco velocity
      1.0]           # aruco attitude
 
 ## Additive Process Noise
@@ -58,6 +59,7 @@ Qx: [0.000, 0.000, 0.000,       # pos
      1.01,                    # baro bias
      1.0,                       # reference altitude
      0.0001, 0.0001, 0.0001,             # aruco position
+     0.0001, 0.0001,               # aruco velocity
      0.0001]                       # aruco attitude
 
 ## Lambda (Partial Update)
@@ -71,6 +73,7 @@ lambda: [1.0, 1.0, 1.0,       # pos
          0.5,                 # baro bias
          0.3,                 # reference altitude
          1.0, 1.0, 1.0,       # aruco position
+         1.0, 1.0,            # aruco velocity
          1.0]                 # aruco attitude
 
 # Constant Parameeters
