--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -46,9 +46,11 @@ P0: [10.0, 10.0, 10.0, # pos
      0.0,           # baro bias
      100.0, # reference altitude
      1.0, 1.0, 1.0, # aruco position
-     1.0, 1.0,      # aruco velocity
+     # 1.0, 1.0,      # aruco velocity
+     0.0, 0.0,      # aruco velocity
      1.0,           # aruco attitude
-     1.0]           # aruco angular vel
+     # 1.0]           # aruco angular vel
+     0.0]           # aruco angular vel
 
 ## Additive Process Noise
 Qx: [0.000, 0.000, 0.000,       # pos
@@ -60,9 +62,11 @@ Qx: [0.000, 0.000, 0.000,       # pos
      1.01,                    # baro bias
      1.0,                       # reference altitude
      0.0001, 0.0001, 0.0001,             # aruco position
-     0.0001, 0.0001,               # aruco velocity
+     # 0.0001, 0.0001,               # aruco velocity
+     0., 0.,               # aruco velocity
      0.0001,                       # aruco attitude
-     0.0001]                       # aruco angular vel
+     # 0.0001]                       # aruco angular vel
+     0.]                       # aruco angular vel
 
 ## Lambda (Partial Update)
 # 1.0 = use full update
