goal is always at 0 altitude

--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -1,5 +1,5 @@
 ## Post-Process Information
-bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/rock_canyon/rock_canyon_aruco1.bag"
+bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/rock_canyon/rock_canyon_aruco2.bag"
 status_topic: "/status"
 imu_topic: "/imu/data"
 baro_topic: "/baro"
@@ -45,7 +45,7 @@ P0: [10.0, 10.0, 10.0, # pos
      # 9.0,           # baro bias
      0.0,           # baro bias
      100.0, # reference altitude
-     1.0, 1.0, 1.0, # aruco position
+     1.0, 1.0, # aruco position
      # 1.0, 1.0,      # aruco velocity
      0.0, 0.0,      # aruco velocity
      1.0,           # aruco attitude
@@ -58,10 +58,10 @@ Qx: [0.000, 0.000, 0.000,       # pos
      0.00001, 0.00001, 0.00001,       # vel
      0.0001, 0.0001, 0.0001,       # accel bias
      0.0001, 0.0001, 0.0001,    # gyro bias
-     # 0.000001,                    # baro bias
+     # 0.000000,                    # baro bias
      1.01,                    # baro bias
      1.0,                       # reference altitude
-     0.0001, 0.0001, 0.0001,             # aruco position
+     0.0001, 0.0001,              # aruco position
      # 0.0001, 0.0001,               # aruco velocity
      0., 0.,               # aruco velocity
      0.0001,                       # aruco attitude
@@ -78,7 +78,7 @@ lambda: [1.0, 1.0, 1.0,       # pos
          0.1, 0.1, 0.1,       # gyro bias
          0.5,                 # baro bias
          0.3,                 # reference altitude
-         1.0, 1.0, 1.0,       # aruco position
+         1.0, 1.0,        # aruco position
          1.0, 1.0,            # aruco velocity
          1.0,                 # aruco attitude
          1.0]                 # aruco angular vel
@@ -101,7 +101,7 @@ accel_noise_stdev: 0.5
 gyro_noise_stdev: 0.02
 position_noise_stdev: 0.01 # Mocap
 attitude_noise_stdev: 0.01 # Mocap
-baro_pressure_noise_stdev: 2.0
+baro_pressure_noise_stdev: 10.0
 range_noise_stdev: 0.1
 aruco_pos_stdev: 0.1
 aruco_yaw_stdev: 0.1
