--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -36,6 +36,8 @@ use_zero_vel: true
 R_zero_vel: [0.001, 0.001, 0.001, # vel
               0.001] # Altitude
 
+max_landmarks: 10
+
 ## Initial Uncertainty
 P0: [10.0, 10.0, 10.0, # pos
      0.01, 0.01, 0.01, # att
@@ -51,6 +53,7 @@ P0: [10.0, 10.0, 10.0, # pos
      1.0,           # aruco attitude
      # 1.0]           # aruco angular vel
      0.0]           # aruco angular vel
+P0_lms: [1., 1., 1.]
 
 ## Additive Process Noise
 Qx: [0.000, 0.000, 0.000,       # pos
@@ -67,6 +70,7 @@ Qx: [0.000, 0.000, 0.000,       # pos
      0.0001,                       # aruco attitude
      # 0.0001]                       # aruco angular vel
      0.]                       # aruco angular vel
+Qx_lms: [0.001, 0.001, 0.001]
 
 ## Lambda (Partial Update)
 # 1.0 = use full update
@@ -82,6 +86,7 @@ lambda: [1.0, 1.0, 1.0,       # pos
          1.0, 1.0,            # aruco velocity
          1.0,                 # aruco attitude
          1.0]                 # aruco angular vel
+lambda_lms: [1.0, 1.0, 0.5]
 
 # Constant Parameeters
 p_b2g: [0, 0, 0] # position from body frame to gps frame
