--- a/roscopter/package.xml
+++ b/roscopter/package.xml
@@ -21,6 +21,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>roslib</build_depend>
+  <build_depend>feature_tracker</build_depend>
 
   <run_depend>nav_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -33,6 +34,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>roslib</run_depend>
+  <run_depend>feature_tracker</run_depend>
 
 
 
