--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -1,6 +1,7 @@
 ## Post-Process Information
 # bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/rock_canyon/rock_canyon_aruco2.bag"
-bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/mocap1.bag"
+# bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/mocap1.bag"
+bag_name: "/home/mmmfarrell/magicc/catkin_ws/src/bags/moving_cart_control/jacob_circle_full_aruco.bag"
 status_topic: "/status"
 imu_topic: "/imu/data"
 baro_topic: "/baro"
@@ -52,11 +53,11 @@ P0: [10.0, 10.0, 10.0, # pos
      0.0,           # baro bias
      100.0, # reference altitude
      1.0, 1.0, # aruco position
-     # 1.0, 1.0,      # aruco velocity
-     0.0, 0.0,      # aruco velocity
+     1.0, 1.0,      # aruco velocity
+     # 0.0, 0.0,      # aruco velocity
      1.0,           # aruco attitude
-     # 1.0]           # aruco angular vel
-     0.0]           # aruco angular vel
+     1.0]           # aruco angular vel
+     # 0.0]           # aruco angular vel
 P0_lms: [1., 1., 1.]
 
 ## Additive Process Noise
@@ -69,11 +70,11 @@ Qx: [0.000, 0.000, 0.000,       # pos
      1.01,                    # baro bias
      1.0,                       # reference altitude
      0.0001, 0.0001,              # aruco position
-     # 0.0001, 0.0001,               # aruco velocity
-     0., 0.,               # aruco velocity
+     0.0001, 0.0001,               # aruco velocity
+     # 0., 0.,               # aruco velocity
      0.0001,                       # aruco attitude
-     # 0.0001]                       # aruco angular vel
-     0.]                       # aruco angular vel
+     0.0001]                       # aruco angular vel
+     # 0.]                       # aruco angular vel
 Qx_lms: [0.01, 0.01, 0.01]
 
 ## Lambda (Partial Update)
