add back in 3rd state for goal position

--- a/roscopter/params/ekf.yaml
+++ b/roscopter/params/ekf.yaml
@@ -52,7 +52,7 @@ P0: [10.0, 10.0, 10.0, # pos
      # 9.0,           # baro bias
      0.0,           # baro bias
      100.0, # reference altitude
-     1.0, 1.0, # aruco position
+     1.0, 1.0, 1., # aruco position
      1.0, 1.0,      # aruco velocity
      # 0.0, 0.0,      # aruco velocity
      1.0,           # aruco attitude
@@ -69,13 +69,13 @@ Qx: [0.000, 0.000, 0.000,       # pos
      # 0.000000,                    # baro bias
      1.01,                    # baro bias
      1.0,                       # reference altitude
-     0.0001, 0.0001,              # aruco position
-     0.0001, 0.0001,               # aruco velocity
+     0.000001, 0.000001, 0.000001,              # aruco position
+     1.1, 1.1,               # aruco velocity
      # 0., 0.,               # aruco velocity
-     0.0001,                       # aruco attitude
-     0.0001]                       # aruco angular vel
+     0.00000001,                       # aruco attitude
+     1.1]                       # aruco angular vel
      # 0.]                       # aruco angular vel
-Qx_lms: [0.01, 0.01, 0.01]
+Qx_lms: [0.1, 0.1, 0.1]
 
 ## Lambda (Partial Update)
 # 1.0 = use full update
@@ -87,7 +87,7 @@ lambda: [1.0, 1.0, 1.0,       # pos
          0.1, 0.1, 0.1,       # gyro bias
          0.5,                 # baro bias
          0.3,                 # reference altitude
-         1.0, 1.0,        # aruco position
+         1.0, 1.0, 1.0,        # aruco position
          1.0, 1.0,            # aruco velocity
          1.0,                 # aruco attitude
          1.0]                 # aruco angular vel
@@ -119,7 +119,7 @@ attitude_noise_stdev: 0.01 # Mocap
 baro_pressure_noise_stdev: 10.0
 range_noise_stdev: 0.1
 aruco_pos_stdev: 0.1
-aruco_yaw_stdev: 0.1
+aruco_yaw_stdev: 0.01
 
 manual_gps_noise: false # choose noise params for GPS or use the values reported from the message topic
 gps_horizontal_stdev: 0.021
